#33 preserve version in msi app title entry